[package]
name = "yara_comfyui_tool"
version = "0.1.0"
edition = "2021"

description = "A terminal-based companion program for ComfyUI."
license = "GPL-3.0"
readme = "readme.md"
keywords = ["comfyui", "ai", "stable_diffusion"]
categories = ["command-line-utilities"]
repository = "https://github.com/Satellile/yara"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.111"
isahc = {version = "1.7.2", features = ["json", "cookies", "text-decoding"] }
serde = { version = "1.0.164", features = ["derive"] }
notan = { version = "0.11.0", features = ["extra"] }
imagesize = "0.12.0"
clipboard = "0.5.0"
regex = "1.8.4"
open = "4.1.0"
native-dialog = "0.6.3"
blake3 = "1.5.0"
crc32fast = "1.3.2"
