[package]
name = "yara"
version = "1.0.3"
edition = "2021"

description = "A terminal-based companion program for ComfyUI."
license = "GPL-3.0"
readme = "readme.md"
keywords = ["comfyui", "ai", "stable_diffusion"]
categories = ["command-line-utilities"]
repository = "https://github.com/Satellile/yara"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.113"
isahc = { version = "1.7.2", features = ["json", "cookies", "text-decoding"] }
serde = { version = "1.0.164", features = ["derive"] }
notan = { version = "0.11.0", features = ["extra"] }
imagesize = "0.13.0"
clipboard = "0.5.0"
regex = "1.8.4"
open = "5.3.0"
native-dialog = "0.7.0"
blake3 = "1.5.0"
crc32fast = "1.3.2"

time = ">=0.3.35" # necessary as of Rust 1.80
json5 = "0.4.1"   # Some custom nodes have NaN values, which serde_json doesn't seem to handle as easily. I use this as a fallback
